# bletio

./: Cargo.toml  HANDOFF.md  README.md  size_of.txt
.github/workflows/: general.yml
bletio-hci/: Cargo.toml
bletio-hci/src/: acl_data.rs  command.rs  hci.rs  iso.rs  lib.rs  traits.rs
bletio-hci/src/advertising/: extended.rs  mod.rs
bletio-hci/src/connection/: connection_handle.rs
bletio-hci/src/event/: command_complete.rs  data_buffer_overflow.rs  hardware_error.rs  le_extended_advertising_report.rs  le_flow_control_credit.rs  le_meta.rs  le_phy_update_complete.rs  mod.rs
bletio-hci/src/test/: e2e_tests.rs
bletio-host/: Cargo.toml
bletio-host/examples/: full_stack_demo.rs  gatt_client_demo.rs  gatt_server_demo.rs  smp_pairing_demo.rs
bletio-host/src/: ble_device.rs  ble_host.rs  bond_store.rs  conformance.rs  connection_registry.rs  connection_update_parameters.rs  lib.rs  power.rs
bletio-host/src/assigned_numbers/: ad_types.rs  appearance_values.rs  company_identifiers.rs  service_uuids.rs  uri_schemes.rs
bletio-host/src/att/: att_client.rs  att_pdu.rs  gatt.rs  gatt_server.rs  mod.rs  profiles.rs
bletio-host/src/smp/: mod.rs  pairing.rs  smp_pdu.rs
bletio-utils/: Cargo.toml
bletio-utils/src/: lib.rs
cli/: Cargo.toml
cli/src/: main.rs
