[workspace]
resolver = "2"
members = ["bletio-hci", "bletio-host", "bletio-utils"]
exclude = ["update-assigned-numbers"]

[workspace.package]
edition = "2021"
authors = ["Ghislain MARY <ghislain@ghislainmary.fr>"]
license = "MIT OR Apache-2.0"
keywords = ["no-std", "ble", "bluetooth"]
categories = ["embedded", "no-std"]
rust-version = "1.75"

[workspace.dependencies]
approx = "0.5"
bitflags = "2.8"
claims = "0.8"
defmt = "0.3"
embassy-time = { version = "0.4" }
heapless = "0.8"
log = "0.4"
nom = { version = "8.0", default-features = false }
num_enum = { version = "0.7", default-features = false }
rstest = "0.24"
tokio = { version = "1.43", features = ["rt", "time"] }
tokio-macros = "2.5"
tokio-test = "0.4"
