[package]
name = "bletio-host"
version = "0.1.0"
description = "Host part of the bletio BLE stack"
edition.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["tokio"]
embassy = ["bletio-hci/embassy"]
tokio = ["bletio-hci/tokio"]
defmt = ["dep:defmt", "bletio-hci/defmt", "bletio-utils/defmt"]
log = ["dep:log", "bletio-hci/log", "bletio-utils/log"]

[dependencies]
bitflags = { workspace = true }
bletio-hci = { path = "../bletio-hci", default-features = false }
bletio-utils = { path = "../bletio-utils" }
defmt = { workspace = true, optional = true }
heapless = { workspace = true }
log = { workspace = true, optional = true }
nom = { workspace = true }
num_enum = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
claims = { workspace = true }
rstest = { workspace = true }
