[package]
name = "bletio-utils"
version = "0.1.0"
description = "Utilities for the bletio BLE stack"
edition.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
defmt = ["dep:defmt"]
log = ["dep:log"]

[dependencies]
bitflags = { workspace = true }
defmt = { workspace = true, optional = true }
log = { workspace = true, optional = true }
